--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "next": "14.2.13",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "eslint": "^8",
