--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "next": "14.2.13",
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5"
