--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
+    "framer-motion": "^11.11.17",
     "next": "14.2.13",
     "react": "^18",
     "react-confetti": "^6.1.0",
